kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-worker
  namespace: realtime
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: realtime-worker
  template:
    metadata:
      labels:
        app: realtime-worker
    spec:
      containers:
        - name: realtime-worker
          image: flxu/realtime_game:worker-latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
